SERVER-34347 Create new batch when targeted writes batch includes same target with different shardVersion